# bazel_python_example

./: .bazelrc  .gitignore  Makefile  Procfile  README.md  WORKSPACE
services/api/: BUILD.bazel  setup.py
services/api/src/api/: __init__.py  main.py  routes.py
services/api/tests/: conftest.py  test_routes.py
services/echo/: BUILD.bazel  requirements.txt  setup.py
services/echo/proto/: BUILD.bazel  message.proto
services/echo/src/echo/: __init__.py  main.py  server.py
services/echo/tests/: conftest.py  test_server.py
tools/: run_under_wrapper.sh
