package(default_visibility = ["//visibility:public"])

load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_library")
#load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_compile")

py_proto_library(
    name = "proto_library",
    protos = [
        "message.proto",
    ],
    with_grpc = True,
)
